--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body{
+    min-height: 100vh;
+    background: linear-gradient(#212121, #050505);
+    font-family: 'Montserrat', sans-serif;
+}
