style: change bg color

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,6 @@
 
 body{
     min-height: 100vh;
-    background: linear-gradient(#212121, #050505);
+    background: linear-gradient(#403d3d, #050505);
     font-family: 'Montserrat', sans-serif;
 }
